--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       flex: 2;
       background: url('your-profile-picture.jpg') center center/cover no-repeat;
       min-height: 400px;
+      transition: background-size 0.3s, background-position 0.3s;
     }
     .hero-text-side {
       flex: 3;
@@ -359,6 +360,13 @@
       }
     }
     @media (max-width: 600px) {
+      .hero-img-side {
+        background-size: contain !important;
+        background-repeat: no-repeat !important;
+        background-position: center top !important;
+        min-height: 180px;
+        height: 180px;
+      }
       nav ul {
         gap: 0.7rem;
       }
