--- a/index.html
+++ b/index.html
@@ -100,12 +100,6 @@
       max-width: 640px;
       text-align: justify;
     }
-    /* Larger font for .hero-desc only on desktop */
-    @media (min-width: 1025px) {
-      .hero-desc {
-        font-size: 1.3rem;
-      }
-    }
     .hero-desc a {
       color: #38bdf8;
       text-decoration: none;
@@ -312,19 +306,10 @@
       background: #0f172a;
       margin-top: 2.2rem;
       text-align: center;
-    }
-    .get-in-touch h2 {
-      font-size: 2rem;
-      font-weight: 700;
-      margin-bottom: 2rem;
-      color: #38bdf8;
-    }
-    .get-in-touch p {
-      font-size: 1.03rem;
-      line-height: 1.75;
-      margin-bottom: 1.2rem;
-      color: #e2e8f0;
-      word-break: break-word;
+      max-width: 100vw;
+      box-sizing: border-box;
+      margin-left: auto;
+      margin-right: auto;
     }
     footer {
       margin-top: 1.5rem;
@@ -333,6 +318,14 @@
       font-size: 0.9rem;
       color: #94a3b8;
       background-color: #1e293b;
+    }
+
+    /* Desktop: Home intro paragraph bigger and wider */
+    @media (min-width: 1025px) {
+      .hero-desc {
+        font-size: 1.35rem;
+        max-width: 900px;
+      }
     }
     /* Responsive Design */
     @media (max-width: 1024px) {
@@ -359,6 +352,7 @@
       }
       .hero-desc {
         font-size: 1rem;
+        max-width: 640px;
       }
       .carousel-item img {
         max-width: 90vw;
@@ -387,6 +381,7 @@
       }
       .hero-desc {
         font-size: 0.99rem;
+        max-width: 100vw;
       }
       .card, .carousel-item {
         padding: 0.7rem 0.1rem;
@@ -397,6 +392,10 @@
       .social-links a img { width: 15px; height: 15px; }
       .get-in-touch h2, .education-section h2, .research-section h2 {
         font-size: 1.09rem;
+      }
+      .get-in-touch {
+        padding-left: 0.2rem;
+        padding-right: 0.2rem;
       }
     }
   </style>
