--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     }
     .hero-img-side {
       flex: 2;
-      background: url('your-profile-picture.jpg') center center/cover no-repeat;
+      background: url('your-profile-picture.jpg') center center/85% no-repeat;
       min-height: 400px;
       transition: background-size 0.3s, background-position 0.3s;
     }
@@ -158,7 +158,6 @@
     .social-links a.gmail { border-color: #ea4335; }
     .social-links a.gmail:hover, .social-links a.gmail:focus { background: #ea4335; }
 
-    /* Education Section */
     .education-section {
       padding: 3rem 1rem 2rem 1rem;
       background: linear-gradient(to right, #e0f2fe, #f8fafc);
@@ -224,7 +223,6 @@
       color: #0a66c2;
       outline: none;
     }
-    /* Research Section */
     .research-section {
       padding: 3rem 1rem 2rem 1rem;
       background: linear-gradient(to right, #f8fafc, #e0f2fe);
@@ -300,33 +298,15 @@
       background: rgba(0, 0, 0, 0.8);
       outline: none;
     }
-    /* Get in Touch Section */
-    .get-in-touch {
-      padding: 3.2rem 1rem 2.2rem 1rem;
-      background: #0f172a;
-      margin-top: 2.2rem;
-      text-align: center;
-      max-width: 100vw;
-      box-sizing: border-box;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    footer {
-      margin-top: 1.5rem;
-      padding: 1rem;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #94a3b8;
-      background-color: #1e293b;
-    }
 
-    /* Desktop: Home intro paragraph bigger and wider */
+    /* Home intro paragraph bigger and wider on desktop */
     @media (min-width: 1025px) {
       .hero-desc {
         font-size: 1.35rem;
         max-width: 900px;
       }
     }
+
     /* Responsive Design */
     @media (max-width: 1024px) {
       .hero-split {
@@ -394,9 +374,18 @@
         font-size: 1.09rem;
       }
       .get-in-touch {
-        padding-left: 0.2rem;
-        padding-right: 0.2rem;
+        padding-left: 3vw;
+        padding-right: 3vw;
       }
+    }
+    /* Ensure "Get in Touch" always fits */
+    .get-in-touch {
+      max-width: 100vw;
+      width: 100%;
+      box-sizing: border-box;
+      margin-left: auto;
+      margin-right: auto;
+      overflow-wrap: break-word;
     }
   </style>
 </head>
