--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     }
     .hero-img-side {
       flex: 2;
-      background: url('your-profile-picture.jpg') center center/98% no-repeat;
+      background: url('your-profile-picture.jpg') center center/85% no-repeat;
       min-height: 400px;
       transition: background-size 0.3s, background-position 0.3s;
     }
@@ -378,7 +378,7 @@
         padding-right: 3vw;
       }
     }
-    /* Ensure "Get in Touch" always fits */
+    /* Ensure "Get in Touch" always fits and is centered */
     .get-in-touch {
       max-width: 100vw;
       width: 100%;
@@ -386,6 +386,15 @@
       margin-left: auto;
       margin-right: auto;
       overflow-wrap: break-word;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .get-in-touch > * {
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
     }
   </style>
 </head>
