--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
   <section class="hero-split" id="home">
     <div class="hero-img-side"></div>
     <div class="hero-text-side">
-      <h1>Welcome to my personal website!</h1>
+      <h1>Welcome Everyone,</h1>
       <div class="hero-desc">
         I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
