--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       margin-bottom: 1.2rem;
       line-height: 1.5;
       max-width: 540px;
-      text-align: justify;
+      text-align: left;
     }
     .hero-desc a {
       color: #38bdf8;
@@ -331,7 +331,7 @@
       background-color: #1e293b;
     }
 
-    /* Desktop: Increase font sizes for every section, compact hero-desc, enlarge cards */
+    /* Desktop: Increase font sizes for every section, compact hero-desc, enlarge cards, left-align intro */
     @media (min-width: 1025px) {
       body, nav, .hero-desc, .card, .carousel-item, .get-in-touch, .get-in-touch p, .get-in-touch h2 {
         font-size: 1.25rem;
@@ -369,6 +369,7 @@
         max-width: 700px;
         line-height: 1.45;
         margin-bottom: 1.1rem;
+        text-align: left;
       }
     }
     /* Responsive Design */
@@ -460,7 +461,7 @@
   <section class="hero-split" id="home">
     <div class="hero-img-side"></div>
     <div class="hero-text-side">
-      <h1>Welcome Everyone,</h1>
+      <h1>Welcome to my personal website!</h1>
       <div class="hero-desc">
         I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
