--- a/index.html
+++ b/index.html
@@ -461,22 +461,20 @@
   <section class="hero-split" id="home">
     <div class="hero-img-side"></div>
     <div class="hero-text-side">
-      <h1>Welcome to my personal website!</h1>
+      <h1>Welcome!</h1>
       <div class="hero-desc">
         I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-          Institute of Developmental Biology and Neurobiology (iDN)
-        </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
+          Institute of Developmental Biology and Neurobiology(iDN).
+        </a> My work focuses on developing biomaterials for neural regeneration, in collaboration with the
         <a href="https://lir-mainz.de/en/lir" target="_blank">
-          Leibniz Institute for Resilience Research (LIR)
+          Leibniz Institute for Resilience Research(LIR)
         </a> and the
         <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-          Max Planck Institute for Polymer Research (MPI-P)
-        </a>, Germany.
+          Max Planck Institute for Polymer Research(MPI-P),
+        </a>Germany.
         <br><br>
-        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
-        <br><br>
-        If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
+        Outside of the lab, I love exploring new cuisines and traveling to discover different cultures. If neurosciences or regenerative medicine interests you, feel free to get in touch!
       </div>
       <div class="social-links">
         <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" class="facebook">
@@ -600,7 +598,7 @@
       Germany
     </p>
     <p>
-      Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
+      Feel free to reach out regarding research collaborations, speaking engagements, or discussing new ideas and potential partnerships.
     </p>
   </section>
   <footer>
