--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <style>
     html {
       box-sizing: border-box;
+      scroll-behavior: smooth; /* Enable smooth scrolling */
     }
     *, *:before, *:after {
       box-sizing: inherit;
@@ -61,6 +62,11 @@
       color: #0f172a;
       background-color: #38bdf8;
       outline: none;
+    }
+
+    /* Add scroll-margin so section headers are not hidden behind navbar */
+    section {
+      scroll-margin-top: 80px; /* Adjust if your nav height changes */
     }
 
     .hero-split {
