--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     }
     .hero-img-side {
       flex: 2;
-      background: url('your-profile-picture.jpg') center center/85% no-repeat;
-      min-height: 400px;
+      background: url('your-profile-picture.jpg') center center/95% no-repeat;
+      min-height: 700px;
       transition: background-size 0.3s, background-position 0.3s;
     }
     .hero-text-side {
@@ -481,9 +481,9 @@
   <section class="hero-split" id="home">
     <div class="hero-img-side"></div>
     <div class="hero-text-side">
-      <h1>Welcome to my personal website!</h1>
+      <h1>Welcome!</h1>
       <div class="hero-desc">
-        I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
+        I'm Arupam Biswas, a neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
           Institute of Developmental Biology and Neurobiology (iDN)
         </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
@@ -494,9 +494,7 @@
           Max Planck Institute for Polymer Research (MPI-P)
         </a>, Germany.
         <br><br>
-        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
-        <br><br>
-        If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
+        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts.  If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
       </div>
       <div class="social-links">
         <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" class="facebook">
@@ -527,8 +525,8 @@
         <p>
           <strong>
             <a href="https://www.uni-mainz.de/" target="_blank" class="edu-link">
-              Johannes Gutenberg University Mainz
-            </a>, Germany.
+              Johannes Gutenberg University Mainz, Germany.
+            </a>
           </strong>
         </p>
         <ul>
@@ -546,7 +544,7 @@
         <p>
           <strong>
             <a href="https://www.visvabharati.ac.in/index.html" target="_blank" class="edu-link">
-              Visva-Bharati, India
+              Visva-Bharati, India.
             </a>
           </strong>
         </p>
