--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
       .hero-desc {
         font-size: 0.99rem;
         max-width: 100vw;
-        text-align: center;
+        text-align: justify;
         margin-left: auto;
         margin-right: auto;
       }
@@ -492,9 +492,9 @@
   <section class="hero-split" id="home">
     <div class="hero-img-side"></div>
     <div class="hero-text-side">
-      <h1>Welcome to my personal website!</h1>
+      <h1>Welcome to Arupam's Space!</h1>
       <div class="hero-desc">
-        I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
+        I'm Arupam Biswas, a Neuroscience Researcher driven by a deep curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing my PhD at
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
           Institute of Developmental Biology and Neurobiology (iDN)
         </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
@@ -502,12 +502,10 @@
           Leibniz Institute for Resilience Research (LIR)
         </a> and the
         <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-          Max Planck Institute for Polymer Research (MPI-P)
-        </a>, Germany.
+          Max Planck Institute for Polymer Research (MPI-P),
+        </a>Germany.
         <br><br>
-        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
-        <br><br>
-        If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
+        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. If you are interested in neurobiology, regenerative medicine, or want to collaborate, would love to hear from you!
       </div>
       <div class="social-links">
         <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" class="facebook">
@@ -557,8 +555,8 @@
         <p>
           <strong>
             <a href="https://www.visvabharati.ac.in/index.html" target="_blank" class="edu-link">
-              Visva-Bharati, India
-            </a>
+              Visva-Bharati
+            </a>, India.
           </strong>
         </p>
         <ul>
@@ -566,10 +564,10 @@
           <li>Principal Investigator: 
             <a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" target="_blank" class="edu-link">
               Dr. Ishwariya Venkatesh
-            </a>, Senior Scientist,
+            </a>, Senior Scientist and Group Leader,
             <a href="https://www.ccmb.res.in/" target="_blank" class="edu-link">
               CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB)
-            </a>, India
+            </a>, India.
           </li>
         </ul>
       </div>
@@ -631,7 +629,7 @@
       Germany
     </p>
     <p>
-      Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
+      Feel free to reach out regarding research collaborations, speaking engagements, or to discuss new ideas and potential partnerships.
     </p>
   </section>
   <footer>
