--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
       outline: none;
     }
 
-    /* Add scroll-margin so section headers are not hidden behind navbar */
     section {
-      scroll-margin-top: 80px; /* Adjust if your nav height changes */
+      scroll-margin-top: 80px;
     }
 
     .hero-split {
@@ -105,7 +104,6 @@
       margin-bottom: 1.2rem;
       line-height: 1.5;
       max-width: 540px;
-      /* Default for mobile is centered; override on desktop below */
       text-align: center;
       margin-left: auto;
       margin-right: auto;
@@ -263,6 +261,7 @@
       box-sizing: border-box;
       font-size: 1rem;
     }
+    /* Default image style for mobile/small screens */
     .carousel-item img {
       width: 100%;
       max-width: 480px;
@@ -341,7 +340,7 @@
       background-color: #1e293b;
     }
 
-    /* Desktop: Increase font sizes, justify intro text, utilize free space */
+    /* Desktop: Increase font sizes, justify intro text, utilize free space, and ENLARGE Project 1 and 2 images */
     @media (min-width: 1025px) {
       body, nav, .hero-desc, .card, .carousel-item, .get-in-touch, .get-in-touch p, .get-in-touch h2 {
         font-size: 1.25rem;
@@ -376,12 +375,17 @@
       }
       .hero-desc {
         font-size: 1.2rem;
-        max-width: 850px; /* Use more width on desktop */
+        max-width: 850px;
         line-height: 1.45;
         margin-bottom: 1.1rem;
-        text-align: justify; /* Justify both ends */
+        text-align: justify;
         margin-left: 0;
         margin-right: 0;
+      }
+      /* Enlarge only project 1 and 2 images on desktop */
+      .carousel-item:nth-child(1) img,
+      .carousel-item:nth-child(2) img {
+        max-width: 680px;
       }
     }
     /* Responsive Navigation: Stack nav items vertically on small screens */
@@ -418,7 +422,7 @@
       .hero-desc {
         font-size: 0.99rem;
         max-width: 100vw;
-        text-align: justify;
+        text-align: center;
         margin-left: auto;
         margin-right: auto;
       }
@@ -492,9 +496,9 @@
   <section class="hero-split" id="home">
     <div class="hero-img-side"></div>
     <div class="hero-text-side">
-      <h1>Welcome to Arupam's Space!</h1>
+      <h1>Welcome to my personal website!</h1>
       <div class="hero-desc">
-        I'm Arupam Biswas, a Neuroscience Researcher driven by a deep curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing my PhD at
+        I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
           Institute of Developmental Biology and Neurobiology (iDN)
         </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
@@ -502,10 +506,12 @@
           Leibniz Institute for Resilience Research (LIR)
         </a> and the
         <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-          Max Planck Institute for Polymer Research (MPI-P),
-        </a>Germany.
+          Max Planck Institute for Polymer Research (MPI-P)
+        </a>, Germany.
         <br><br>
-        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. If you are interested in neurobiology, regenerative medicine, or want to collaborate, would love to hear from you!
+        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
+        <br><br>
+        If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
       </div>
       <div class="social-links">
         <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" class="facebook">
@@ -555,8 +561,8 @@
         <p>
           <strong>
             <a href="https://www.visvabharati.ac.in/index.html" target="_blank" class="edu-link">
-              Visva-Bharati
-            </a>, India.
+              Visva-Bharati, India
+            </a>
           </strong>
         </p>
         <ul>
@@ -564,10 +570,10 @@
           <li>Principal Investigator: 
             <a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" target="_blank" class="edu-link">
               Dr. Ishwariya Venkatesh
-            </a>, Senior Scientist and Group Leader,
+            </a>, Senior Scientist,
             <a href="https://www.ccmb.res.in/" target="_blank" class="edu-link">
               CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB)
-            </a>, India.
+            </a>, India
           </li>
         </ul>
       </div>
@@ -599,13 +605,6 @@
             </p>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="project3.jpg" alt="Project 3">
-          <div class="item-info">
-            <h3>Project Title 3</h3>
-            <p>A quick summary of the research and its significance.</p>
-          </div>
-        </div>
       </div>
       <button class="carousel-button prev">‹</button>
       <button class="carousel-button next">›</button>
@@ -629,7 +628,7 @@
       Germany
     </p>
     <p>
-      Feel free to reach out regarding research collaborations, speaking engagements, or to discuss new ideas and potential partnerships.
+      Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
     </p>
   </section>
   <footer>
