--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     }
     .hero-img-side {
       flex: 2;
-      background: url('your-profile-picture.jpg') center center/85% no-repeat;
-      min-height: 400px;
+      background: url('your-profile-picture.jpg') center center/95% no-repeat;
+      min-height: 700px;
       transition: background-size 0.3s, background-position 0.3s;
     }
     .hero-text-side {
@@ -496,9 +496,9 @@
   <section class="hero-split" id="home">
     <div class="hero-img-side"></div>
     <div class="hero-text-side">
-      <h1>Welcome to my personal website!</h1>
+      <h1>Welcome to Arupam's Space!</h1>
       <div class="hero-desc">
-        I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
+        I'm Arupam Biswas, a Neuroscience Researcher driven by a deep curiosity about how the Central Nervous System(CNS) heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
           Institute of Developmental Biology and Neurobiology (iDN)
         </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
@@ -561,8 +561,8 @@
         <p>
           <strong>
             <a href="https://www.visvabharati.ac.in/index.html" target="_blank" class="edu-link">
-              Visva-Bharati, India
-            </a>
+              Visva-Bharati
+            </a>, India.
           </strong>
         </p>
         <ul>
